--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="Swap your BEP20 tokens" />
     <meta property="og:url" content="http://easyswap.ml" />
     <meta property="og:image" content="http://easyswap.ml/img/fav.png" />
-    <meta property="og:description" content="Easyswap is a type of DEX known as an automated market maker (AMM), which allows you to swap your BEP20 airdrop tokens for BNB." />
+    <meta property="og:description" content="Easyswap is a type of DEX known as an automated market maker (AMM), which defies all limits to swapping and allows you to swap tokens between differenct networks." />
     <meta name="theme-color" content="#FF0000">
     <meta name="google" content="notranslate" />
     <meta content="width=device-width,initial-scale=1" name="viewport">
