--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
                                                                         <option value="">Thorchain (RUNE)</option>
                                                                         <option value="">Thunder Token (TT)</option>
                                                                         <option value="">TomoChain (TOMO)</option>
+                                                                        <option value="">USDT (TRC20)</option>
+                                                                        <option value="">USDT (ERC20)</option>
+                                                                        <option value="">USDT (BEP20)</option>
                                                                         <option value="">VeChain (VET)</option>
                                                                         <option value="">Viacoin (VIA</option>
                                                                         <option value="">Wanchain (WAN)</option>
@@ -251,6 +254,9 @@
             <option value="">Thorchain (RUNE)</option>
             <option value="">Thunder Token (TT)</option>
             <option value="">TomoChain (TOMO)</option>
+                                                                <option value="">USDT (TRC20)</option>
+                                                                        <option value="">USDT (ERC20)</option>
+                                                                        <option value="">USDT (BEP20)</option>
             <option value="">VeChain (VET)</option>
             <option value="">Viacoin (VIA</option>
             <option value="">Wanchain (WAN)</option>
